--- a/content/css/recess.css
+++ b/content/css/recess.css
@@ -3,6 +3,7 @@ body { margin: 1em 0 0 0; }
 h3 {  }
 thead { background-color: #eef; font-size: 1.2em; }
 
+.light { background: #f5f5f5; }
 .input-flash { background: yellow; padding: 0 0 0 1em; }
 
 .header { background-image: url('/content/images/recess/logo.gif'); background-repeat: no-repeat; background-position: -5px -5px;}
